--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,7 @@
   doi={10.1103/PhysRev.47.777},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+  pdf={ex},
   altmetric={248277},
   dimensions={true},
   google_scholar_id={qyhmnyLat1gC},
@@ -41,6 +41,7 @@
    type = {Journal Article},
    preview={wave-mechanics.gif},
    pdf={example_pdf.pdf},
+   html={https://journals.ametsoc.org/view/journals/bams/93/9/bams-d-11-00272.1.xml},
    altmetric={248277},
    dimensions={true},
    selected={true},
@@ -56,7 +57,7 @@
    year = {2012},
    type = {Journal Article},
    preview={wave-mechanics.gif},
-   pdf={example_pdf.pdf},
+   pdf={bams-bams-d-11-00272.1},
    altmetric={248277},
    dimensions={true},
    selected={true},
