update images anf bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,28 +3,8 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={ex},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true}
-}
+---
+
 
 
 @article{RN3244,
@@ -39,7 +19,7 @@
    url = {http://journals.ametsoc.org/doi/pdf/10.1175/JCLI-D-11-00261.1},
    year = {2012},
    type = {Journal Article},
-   preview={wave-mechanics.gif},
+   preview={joc_2012.webp},
    pdf={example_pdf.pdf},
    html={https://journals.ametsoc.org/view/journals/bams/93/9/bams-d-11-00272.1.xml},
    altmetric={248277},
@@ -56,8 +36,9 @@
    ISSN = {0003-0007},
    year = {2012},
    type = {Journal Article},
-   preview={wave-mechanics.gif},
+   preview={bams_2011.webp},
    pdf={bams-bams-d-11-00272.1},
+   html={https://journals.ametsoc.org/view/journals/bams/93/9/bams-d-11-00272.1.xml},
    altmetric={248277},
    dimensions={true},
    selected={true},
@@ -70,8 +51,13 @@
    ISSN = {1944-8007},
    DOI = {10.1002/2013gl058439},
    url = {http://dx.doi.org/10.1002/2013GL058439},
+   html={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/2013GL058439},
    year = {2013},
-   type = {Journal Article}
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
+   preview={grl.2012.jpg},
+   
 }
 
 @inbook{RN3330,
@@ -86,8 +72,11 @@
    ISBN = {978-94-007-4347-2},
    DOI = {10.1007/978-94-007-4348-9_31},
    url = {http://dx.doi.org/10.1007/978-94-007-4348-9_31},
+   html={https://link.springer.com/chapter/10.1007/978-94-007-4348-9_31},
    year = {2013},
-   type = {Book Section}
+   type = {Book Section},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4209,
@@ -101,7 +90,12 @@
    DOI = {10.1002/2014JD021918},
    url = {http://dx.doi.org/10.1002/2014JD021918},
    year = {2014},
-   type = {Journal Article}
+   html={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/2014JD021918},
+   type = {Journal Article},
+   altmetric={248277},
+   preview={jgr_2014.jpg},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN3686,
@@ -109,7 +103,12 @@
    title = {Signatures of Natural Variability in the Atmosphere using Multiple Reanalysis Dataset},
    journal = {Quarterly Journal of the Royal Meteorological Society},
    year = {2014},
-   type = {Journal Article}
+   type = {Journal Article},
+   DOI={10.1002/qj.2492},
+   html={https://rmets.onlinelibrary.wiley.com/doi/full/10.1002/qj.2492},
+   preview={rmets.webp},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN3685,
@@ -119,7 +118,11 @@
    volume = {141},
    pages = {2670–2689},
    year = {2015},
-   type = {Journal Article}
+   DOI={10.1002/qj.2553},
+   preview={rmets.webp},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN3680,
@@ -129,7 +132,12 @@
    volume = {141},
    pages = {2390-2403},
    year = {2015},
-   type = {Journal Article}
+   DOI={10.1002/qj.2530},
+   preview={rmets.webp},
+   type = {Journal Article},
+   html={https://rmets.onlinelibrary.wiley.com/doi/full/10.1002/qj.2492},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4106,
@@ -142,7 +150,11 @@
    DOI = {10.5194/gmd-2016-91},
    url = {http://www.geosci-model-dev-discuss.net/gmd-2016-91/},
    year = {2016},
-   type = {Journal Article}
+   html={https://gmd.copernicus.org/articles/10/2247/2017/},
+   preview={egu.png},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN3684,
@@ -150,7 +162,12 @@
    title = {Solar Signals in CMIP-5 Simulations: Effects of Atmosphere-Ocean Coupling},
    journal = {Quarterly Journal of the Royal Meteorological Society},
    year = {2016},
-   type = {Journal Article}
+   DOI={10.1002/qj.2695},
+   type = {Journal Article},
+   dimensions={true},
+   html={https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/qj.2695},
+   preview={rmets.webp},
+   selected={true},
 }
 
 @article{RN4179,
@@ -164,7 +181,11 @@
    DOI = {10.1063/1.4975498},
    url = {http://aip.scitation.org/doi/abs/10.1063/1.4975498},
    year = {2017},
-   type = {Journal Article}
+   type = {Journal Article},
+   preview={aip_2017.jpg},
+   html={https://pubs.aip.org/aip/acp/article/1810/1/020002/859361/Solar-influences-on-climate-over-the-Atlantic},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4177,
@@ -175,7 +196,11 @@
    DOI = {10.1002/2016JA023492},
    url = {http://dx.doi.org/10.1002/2016JA023492},
    year = {2017},
-   type = {Journal Article}
+   type = {Journal Article},
+   html={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/2016JA023492},
+   preview={jgr_2017.jpg},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4509,
@@ -183,10 +208,14 @@
    title = {Etesians and the summer circulation over East Mediterranean in Coupled Model Intercomparison Project Phase 5 simulations: Connections to the Indian summer monsoon},
    journal = {International Journal of Climatology},
    ISSN = {0899-8418},
-   DOI = {https://doi.org/10.1002/joc.6259},
+   DOI = {10.1002/joc.6259},
    url = {https://doi.org/10.1002/joc.6259},
    year = {2019},
-   type = {Journal Article}
+   type = {Journal Article},
+   html={https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/joc.6259},
+   preview={joc_2019.jpg},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4410,
@@ -194,7 +223,12 @@
    title = {Slowdown of the Walker circulation at Solar Cycle Maximum},
    journal = {PNAS },
    year = {2019},
-   type = {Journal Article}
+   type = {Journal Article},
+   DOI={10.1073/pnas.1815060116},
+   html={https://www.pnas.org/doi/10.1073/pnas.1815060116},
+   preview={pnas.svg},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4800,
@@ -205,7 +239,12 @@
    number = {6},
    url = {<Go to ISI>://WOS:000545694700005},
    year = {2020},
-   type = {Journal Article}
+   DOI={10.1029/2019MS001995},
+   html={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2019MS001995},
+   preview={james_2020.jpg},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN4957,
@@ -215,11 +254,14 @@
    volume = {16},
    number = {10},
    ISSN = {1748-9326},
-   DOI = {ARTN 104045
-10.1088/1748-9326/ac28b1},
+   DOI = {10.1088/1748-9326/ac28b1},
    url = {<Go to ISI>://WOS:000706847600001},
    year = {2021},
-   type = {Journal Article}
+   html={https://iopscience.iop.org/article/10.1088/1748-9326/ac28b1},
+   preview={iop.svg},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN5185,
@@ -228,12 +270,15 @@
    journal = {Quaternary Science Reviews},
    volume = {292},
    pages = {107617},
-   abstract = {This study investigates solar variability between 650 CE and 1900 based on new and published 14C records with a time resolution of two years or higher. The new high-resolution 14C data presented here are derived from Danish oak and span the period 1058–1250 CE. We determine the durations of past solar minima and periods with moderate solar activity from the solar modulation potential calculated using a carbon-box model with the high-resolution 14C records as input. The observed intervals of solar minima and intermittent periods with moderate activity levels suggest that a Maunder-type minimum occurred in 656–707 CE. We tentatively propose to name this minimum the Horrebow Minimum after Christian Horrebow, an early Danish astronomer who studied the occurrence of sunspots and was the first to propose that they follow a cyclic behaviour. Changes in amplitude and cycle length of the 11-year solar cycle are investigated by bandpass filtering 23 individual 14C records. The filtered 14C data indicate that the length of the 11-year solar cycle may be prolonged before the onset of the Oort, Maunder, and Spörer minima. The amplitude of the 11-year solar cycle associated with solar minima and periods with moderate solar activity between 650 CE and 1900 is estimated to 1.1‰. A two-sample Kolmogorov-Smirnov goodness-of-fit test indicates that there is no significant difference between the amplitude distribution of 11-year solar cycles during solar minima and periods of moderate solar activity. A review of the high-resolution 14C records encompassing the near-Earth supernova events that occurred in 1006 CE, 1054, 1181, 1572, and 1604 suggests that these events were not accompanied by distinct changes in the 14C production rate. Nonetheless, an unusual increase of c. 10‰ in Δ14C between 1048 CE and 1055 is observed and discussed.},
    ISSN = {0277-3791},
-   DOI = {https://doi.org/10.1016/j.quascirev.2022.107617},
+   DOI = {10.1016/j.quascirev.2022.107617},
    url = {https://www.sciencedirect.com/science/article/pii/S0277379122002487},
    year = {2022},
-   type = {Journal Article}
+   html={https://www.sciencedirect.com/science/article/abs/pii/S0277379122002487},
+   preview={qsr_2022.gif},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN5008,
@@ -241,10 +286,14 @@
    title = {The Southeast Asian monsoon and El Nino-Southern Oscillation impact on the summer atmospheric circulation of East Mediterranean during 20th century based on ERA-20C and CMIP5 simulations},
    journal = {International Journal of Climatology},
    ISSN = {0899-8418},
-   DOI = {https://doi.org/10.1002/joc.7510},
+   DOI = {10.1002/joc.7510},
    url = {<Go to ISI>://WOS:000738167700001},
    year = {2022},
-   type = {Journal Article}
+   html={https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/joc.7510},
+   preview={joc_2021.jpg},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN5084,
@@ -259,7 +308,11 @@
    DOI = {10.5194/wcd-3-811-2022},
    url = {https://wcd.copernicus.org/articles/3/811/2022/},
    year = {2022},
-   type = {Journal Article}
+   html={https://wcd.copernicus.org/articles/3/811/2022/},
+   preview={egu.png},
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
 }
 
 @article{RN5260,
@@ -272,7 +325,22 @@
    ISSN = {2045-2322},
    DOI = {10.1038/s41598-023-34715-6},
    url = {https://doi.org/10.1038/s41598-023-34715-6},
+   html={https://www.nature.com/articles/s41598-023-34715-6},
+   preview={scientific.svg},
    year = {2023},
-   type = {Journal Article}
+   type = {Journal Article},
+   dimensions={true},
+   selected={true},
+}
+
+@Article{egusphere-2024-2487,
+AUTHOR = {Gonzalez, P. L. M. and Gray, L. J. and Misios, S. and Osprey, S. and Ma, H.},
+TITLE = {Solar cycle impacts on North Atlantic climate},
+JOURNAL = {EGUsphere},
+VOLUME = {2024},
+YEAR = {2024},
+PAGES = {1--34},
+html = {https://egusphere.copernicus.org/preprints/2024/egusphere-2024-2487/},
+DOI = {10.5194/egusphere-2024-2487}
 }
 
