--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
    type = {Journal Article},
    preview={joc_2012.webp},
    pdf={example_pdf.pdf},
-   html={https://journals.ametsoc.org/view/journals/bams/93/9/bams-d-11-00272.1.xml},
+   link={https://journals.ametsoc.org/view/journals/bams/93/9/bams-d-11-00272.1.xml},
    altmetric={248277},
    dimensions={true},
    selected={true},
@@ -331,6 +331,25 @@
    type = {Journal Article},
    dimensions={true},
    selected={true},
+}
+
+@article{amiridis_natural_2024,
+        title = {Natural {Aerosols}, {Gaseous} {Precursors} and {Their} {Impacts} in {Greece}: {A} {Review} from the {Remote} {Sensing} {Perspective}},
+        volume = {15},
+        issn = {2073-4433},
+        url = {https://www.mdpi.com/2073-4433/15/7/753},
+        doi = {10.3390/atmos15070753},
+        number = {7},
+        journal = {Atmosphere},
+        author = {Amiridis, Vassilis and Kazadzis, Stelios and Gkikas, Antonis and Voudouri, Kalliopi Artemis and Kouklaki, Dimitra and Koukouli, Maria-Elissavet and Garane, Katerina and Georgoulias,
+Aristeidis K. and Solomos, Stavros and Varlas, George and Kampouri, Anna and Founda, Dimitra and Psi
+loglou, Basil E. and Katsafados, Petros and Papachristopoulou, Kyriakoula and Fountoulakis, Ilias an
+d Raptis, Panagiotis-Ioannis and Georgiou, Thanasis and Gialitaki, Anna and Proestakis, Emmanouil an
+d Tsekeri, Alexandra and Drakaki, Eleni and Marinou, Eleni and Giannakaki, Elina and Misios, Stergio
+s and Kapsomenakis, John and Eleftheratos, Kostas and Hatzianastassiou, Nikos and Kalabokas, Pavlos
+and Zanis, Prodromos and Vrekoussis, Mihalis and Papayannis, Alexandros and Kazantzidis, Andreas and
+ Kourtidis, Konstantinos and Balis, Dimitris and Bais, Alkiviadis F. and Zerefos, Christos},
+        year = {2024},
 }
 
 @Article{egusphere-2024-2487,
