--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -341,15 +341,12 @@
         doi = {10.3390/atmos15070753},
         number = {7},
         journal = {Atmosphere},
-        author = {Amiridis, Vassilis and Kazadzis, Stelios and Gkikas, Antonis and Voudouri, Kalliopi Artemis and Kouklaki, Dimitra and Koukouli, Maria-Elissavet and Garane, Katerina and Georgoulias,
-Aristeidis K. and Solomos, Stavros and Varlas, George and Kampouri, Anna and Founda, Dimitra and Psi
-loglou, Basil E. and Katsafados, Petros and Papachristopoulou, Kyriakoula and Fountoulakis, Ilias an
-d Raptis, Panagiotis-Ioannis and Georgiou, Thanasis and Gialitaki, Anna and Proestakis, Emmanouil an
-d Tsekeri, Alexandra and Drakaki, Eleni and Marinou, Eleni and Giannakaki, Elina and Misios, Stergio
-s and Kapsomenakis, John and Eleftheratos, Kostas and Hatzianastassiou, Nikos and Kalabokas, Pavlos
-and Zanis, Prodromos and Vrekoussis, Mihalis and Papayannis, Alexandros and Kazantzidis, Andreas and
- Kourtidis, Konstantinos and Balis, Dimitris and Bais, Alkiviadis F. and Zerefos, Christos},
+        author = {Amiridis et al.},
         year = {2024},
+      type = {Journal Article},
+      dimensions={true},
+      selected={true},
+      preview={atmosphere-logo.png},
 }
 
 @Article{egusphere-2024-2487,
