--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,6 +1,17 @@
 ---
 
 ---
+
+@article{pap_medgu2025,
+  abbr={MedGU 2025},
+  author = {Papadimitriou et al.},
+  title    = "Impact of cloudiness on future variability of PV power generation in the Eastern Mediterranean",
+  year     = 2025,
+  abstract = "Climate change introduces variability in solar-based power generation, with cloudiness being a key modulating factor. The Eastern Mediterranean has been identified as a climate hotspot, making this region particularly relevant for such as-sessments. Solar energy modelling provides a robust frame-work for extending solar resource analyses to projections of photovoltaic (PV) power generation. In this study, we per-formed simulations of PV output power with the Global Solar Energy Estimator (GSEE), with input surface solar radiation and temperature data from three global climate models that participated in the 6th phase of the Climate Model Intercom-parison Project (CMIP-6): CNRM-CM6-1-HR, INP-CM5-0, and MPI-ESM1-2-HR. Projections were evaluated under three different Shared Socioeconomic Pathways (SSPs 245, 370, 585), focusing on four major cities in the region: Athens, Al-exandria, Istanbul and Nicosia. Both all-sky and clear-sky Global Horizontal Irradiance (GHI) were used as input to GSEE, with the contribution of cloudiness further examined through a comparison with the Cloud Modification Factor (CMF), defined as the ratio of all-sky to clear-sky GHI. Moreover, we investigated the sensitivity of system configu-ration to cloud-related variability, by simulating PV plants with fixed panels, single axis, and dual-axis tracking systems. The results indicate consistent shifts in solar resource availa-bility across scenarios, reflecting alterations in cloud patterns and distribution, and highlighting the role of climate change in shaping the long-term potential of PV power generation.",
+  selected={true},
+}
+
+
 @article{misios_comecap2025,
   abbr={COMEACAP 2025},
   author = {Misios et al.},
