--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -11,6 +11,14 @@
   selected={true},
 }
 
+@article{hab_lps2025,
+  abbr={LPS 2025},
+  author = {Haberreiter, Margit and  Misios, Stergios and Fox, Nigel and Bantges, Richard and  Finsterle, Wolfgang},
+  title    = "Solar Irradiance Variability, its Uncertainty and Impact on the Earth Atmosphere",
+  year     = 2025,
+  abstract = "Solar irradiance varies on time-scales from minutes, days, to months, decades, centuries and beyond. To fully understand the effects of solar irradiance variations on the Earth&#039;s atmosphere high-precision measurements as well as robust irradiance reconstruction models are required to fill the gaps when no measurements are available. Here, we present latest work on the uncertainty in atmospheric heating fluxes and the responses of the thermal and chemical structure of the upper atmosphere. We present the solar irradiance input uncertainties as determined within the framework of the TRUTHS mission Accompanying Consolidation Towards Operations Study (TACOS). Our atmospheric and climate model simulations allow us to estimate uncertainties in the atmospheric state for solar spectra of different activity level. The results are compared to the modelling results using the CMIP6- and the forthcoming CMIP7-recomended solar spectra. In addition, we will also report on further related solar irradiance studies within TACOS.",
+}
+
 
 @article{misios_comecap2025,
   abbr={COMEACAP 2025},
