--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,6 +1,22 @@
 ---
 
 ---
+@article{mis_upclim2025,
+  abbr={UPCLIV 2025},
+  author = {Misios et al.},
+  title    = "Mediterranean amplification in (large) ensemble single forcing simulations",
+  year     = 2025,
+  html={https://www.upcliv-workshop.eu/},
+  selected={true},
+}
+
+@article{mis_themes2025,
+  abbr={THEMES 2025},
+  author = {Misios et al.},
+  title    = "Mediterranean climate response to large volcanic eruptions in large ensemble simulations",
+  year     = 2025,
+  selected={true},
+}
 
 @article{pap_medgu2025,
   abbr={MedGU 2025},
