--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,6 +1,15 @@
 ---
 
 ---
+@article{jess_AGU2025,
+  abbr={AGU 2025},
+  author = {Miller et al.},
+  title    = "Terrestrial Atmospheric and Climatological Responses to Recent (within 10 Mya) Encounters with Dense Interstellar Clouds ",
+  year     = 2025,
+  selected={true},
+  abstract="Recently, Opher et al. (2024) proposed that the Solar System passed through a dense interstellar cloud called the Local Lynx of Cold Clouds 2-3 million years ago, with another potential crossing 7-8 million years ago. Due to the cloud’s high density and ram pressure, it would have greatly compressed the heliosphere to within Earth’s orbit, exposing Earth directly to the interstellar medium. Prior investigations into these events have used simple models and scaling relations. In this study, we utilize for the first time a state-of-the-art 3D climatological model (CESM/WACCM) to demonstrate the effects of interstellar hydrogen in Earth’s atmosphere. We examine how this source of high-altitude hydrogen modifies the chemistry and dynamics in the stratosphere and mesosphere. In particular, there is a broad depletion of mesospheric ozone and a concomitant decrease in temperature. We also examine other methods of interstellar forcing, such as cosmic rays and interstellar dust. We conclude with a discussion of potential surface effects."
+}
+
 @article{mis_upclim2025,
   abbr={UPCLIV 2025},
   author = {Misios et al.},
