--- a/_news/2025_12_01_news.md
+++ b/_news/2025_12_01_news.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Congratulate Ms. Roula Kosta for finisging her intercip at KEFAK.
+Congratulations to Roula Kosta for finishing her internship at KEFAK!
