--- a/_posts/2026-01-02-bulletin.md
+++ b/_posts/2026-01-02-bulletin.md
@@ -32,6 +32,7 @@ toc:
   - name: Θερμοκρασία
   - name: Βροχόπτωση
   - name: Εποχική πρόβλεψη
+  - name: Μεδοδολογία
 
 
 # Below is an example of injecting additional post-specific styles.
@@ -81,8 +82,24 @@ _styles: >
 
 
 Η κατάσταση είναι ακόμα πιο έντονη στην Ελλάδα με αύξηση **2.66°C** - σχεδόν διπλάσια από τον παγκόσμιο μέσο όρο. Η αύξηση κατά **1.48°C** μόνο από το 1991-2020 δείχνει τη δραματική επιτάχυνση που βιώνουμε τις τελευταίες τρεις δεκαετίες.
+<div align="center">
+<img src="/assets/img/bulletin_2025-12/bulletin_scatter_t2m-tp_greece_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Figure 1: Global temperature time series for December 2025</i></p>
+</div>
 
 ## Παγκόσμιο κλίμα
+H μεταβολή της παγκόσμιας θερμοκρασίας του αέρα από το 1900 έως τον Δεκέμβριο του 2025, με βάση την κυλιόμενη μέση τιμή 12 μηνών, δείχνει  μια σαφής ανοδική τάση, ιδιαίτερα έντονη μετά το 1980, με τη θερμοκρασιακή ανωμαλία να αυξάνεται από περίπου 0.5°C σε **1.44°C** το Δεκέμβριο του 2025. Η εξαιρετική συμφωνία μεταξύ των δύο συνόλων δεδομένων (GISTEMP και ERA-5) επιβεβαιώνει την αξιοπιστία της παρατηρούμενης υπερθέρμανσης. Η τιμή των 1.44°C υποδεικνύει ότι πλησιάζουμε επικίνδυνα το όριο των 1.5°C που έχει τεθεί από τη Συμφωνία των Παρισίων, με τα τελευταία χρόνια να καταγράφουν πρωτοφανείς ρυθμούς αύξησης της θερμοκρασίας στην ιστορία των μετρήσεων. (ΑΙ generated).
+
+  <div align="center">
+  <img src="/assets/img/bulletin_2025-12/bulletin_ts_global_t2m_2025-12.png" alt="Climate Map" width="700"/>
+  <p><i>Γράφημα 1: Κυλιόμενη (12-μήνες) παγκόσμια μέση Θερμοκρασία αέρα σε σχέση με την περίοδο 1850-1900. </i></p>
+  </div>
+
+
+<div align="center">
+<img src="/assets/img/bulletin_2025-12/bulletin_map_t2m_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Γράφημα 2: Απόκλιση Θερμοκρασίας αέρα τον Δεκέμβριο 2025 σε σχέση με την μέση τιμή του μήνα. Κλιματολογία 1991-2000.</i></p>
+</div>
 
 ### El Nino
 ### North Atlantic Oscillation
@@ -97,236 +114,70 @@ _styles: >
 
 Ολές οι αποκλίσεις παρουσιάζονται σε σχέση με την περίοδο 1991-2020.
 
+<div align="center">
+<img src="/assets/img/bulletin_2025-12/bulletin_ts_greece_bar_t2m_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Γράφημα 3: Απόκλιση Θερμοκρασίας αέρα στην Ελλάδα τον Δεκέμβριο. Κλιματολογία 1991-2000.</i></p>
+</div>
+
+<div align="center">
+<img src="/assets/img/bulletin_2025-12/bulletin_map_greece_t2m_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Figure 1: Global temperature time series for December 2025</i></p>
+</div>
+
+
+
+<div align="center">
+<img src="/assets/img/bulletin_2025-12/bulletin_map_greece_sst_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Figure 1: Global temperature time series for December 2025</i></p>
+</div>
+
+<div align="center">
+<img src="/assets/img/bulletin_2025-12bulletin_ts_greece_bar_sst_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Figure 1: Global temperature time series for December 2025</i></p>
+</div>
+
+
 ## Βροχόπτωση
 
 Ο μηνιαίος υετός για τον Φεβρουάριο 2025 ήταν 24,1 χιλιοστά χαμηλότερος του μέσου μηνιαίου υετού της
 χρονικής περιόδου 1991-2020.
 
+<div align="center">
+<img src="/assets/img/bulletin_2025-12/bulletin_map_greece_tp_2025-12.png" alt="Climate Map" width="700"/>
+<p><i>Figure 1: Global temperature time series for December 2025</i></p>
+</div>
+
 ## Εποχική πρόβλεψη
-Οι εποχικές εκτιμήσεις συντείνουν σε θετικές θερμοκρασιακές αποκλίσεις για το τρίμηνο Μαίου-Ιουλίου.
-Αναμένεται λιγότερη ολικό ύψος βροχής, ιδιαίτερα στην ανατολική Ελλάδα.
-Δεν υπάρχουν ενδείξεις για σημαντικό έλλειμα βροχής στο νότιο Αιγαίο .
-Η εκτίμηση ανανεώνεται κάθε μήνα
+Υπο Ανάπτυξη
 
 
+## Μεθοδολογία
 
-## Code Blocks
+### Δεδομένα
 
-Syntax highlighting is provided within `<d-code>` tags.
-An example of inline code snippets: `<d-code language="html">let x = 10;</d-code>`.
-For larger blocks of code, add a `block` attribute:
+**ERA-5:** Είναι η πέμπτη γενιά δεδομένων επαν-ανάλυσης κλίματος, που παράγεται από το ECMWF. Τα δεδομένα είναι διαθέσιμα από το 1940 και μετά. Η επαν-ανάλυση συνδυάζει δεδομένα μοντέλου με παρατηρήσεις από όλο τον κόσμο σε ένα παγκόσμιο πλήρες σύνολο δεδομένων χρησιμοποιώντας τους νόμους της φυσικής ([link](https://www.ecmwf.int/en/forecasts/datasets/reanalysis-datasets/era5)).
 
-<d-code block language="javascript">
-  var x = 25;
-  function(x) {
-    return x * x;
-  }
-</d-code>
+**Berkeley Earth:** Παρέχει την παγκόσμια επιφανειακή θερμοκρασία στην ξηρά και στους ωκεανούς από το 1850 μέχρι σήμερα. Βασίζεται σε ανάλυση μετρήσεων ([link](http://berkeleyearth.org/)).
 
-**Note:** `<d-code>` blocks do not look good in the dark mode.
-You can always use the default code-highlight using the `highlight` liquid tag:
+**GISTEMP:** Παρέχει την παγκόσμια επιφανειακή θερμοκρασία στην ξηρά και τους ωκεανούς από το 1880 μέχρι σήμερα. Βασίζεται σε ανάλυση μετρήσεων. Χρησιμοποιούμε την 5η έκδοση. Παράγεται από το ινστιτούτο NASA-GISS ([link](https://data.giss.nasa.gov/gistemp/)).
 
-{% highlight javascript %}
-var x = 25;
-function(x) {
-return x \* x;
-}
-{% endhighlight %}
+**HadCRUT:** Παρέχει την παγκόσμια επιφανειακή θερμοκρασία στην ξηρά και στους ωκεανούς από το 1850 μέχρι σήμερα. Είναι η σύνθεση των δεδομένων CRUTEM και HadSST. Παράγεται από Met Office Hadley Centre/Climatic Research Unit ([link](https://www.metoffice.gov.uk/hadobs/hadcrut5/)).
 
----
+**Εποχικές εκτιμήσεις:** Οι εποχικές εκτιμήσεις είναι διαθέσιμες από το πρόγραμμα Copernicus C3S. Είναι προσομοιώσεις πιθανών καιρικών σεναρίων και παρέχουν πιθανότητες για το πόσο πιθανό είναι μια εποχή να είναι υγρότερη, ξηρότερη, θερμότερη ή ψυχρότερη σε σύγκριση με τον μέσο όρο της συγκεκριμένης περιόδου του έτους.
 
-## Interactive Plots
+Όλα τα δεδομένα που χρησιμοποιήθηκαν στο κλιματικό δελτίο είναι ελεύθερα.
 
-You can add interative plots using plotly + iframes :framed_picture:
+### Τρόπος επεξεργασίας
 
-<div class="l-page">
-  <iframe src="{{ '/assets/plotly/demo.html' | relative_url }}" frameborder='0' scrolling='no' height="500px" width="100%" style="border: 1px dashed grey;"></iframe>
-</div>
+Στις διαφάνειες #1 και #2 οι θερμοκρασιακές αποκλίσεις και οι χρονοσειρές θερμοκρασίας υπολογίζονται σε σχέση με την κλιματολογία των ετών 1850-1900 (προ-βιομηχανική περίοδος). Εφαρμόζεται κυλιόμενος μέσος όρος λαμβάνοντας υπόψη τους 12 τελευταίους μήνες.
 
-The plot must be generated separately and saved into an HTML file.
-To generate the plot that you see above, you can use the following code snippet:
+Στην διαφάνεια #2 (Παγκόσμιο κλίμα), ο παγκόσμιος χάρτης από ERA5 έχει υπολογιστεί σε σχέση με την κλιματολογία του αντίστοιχου μήνα για τα έτη 1991-2020, που χρησιμοποιείται από το C3S.
 
-{% highlight python %}
-import pandas as pd
-import plotly.express as px
-df = pd.read_csv(
-'https://raw.githubusercontent.com/plotly/datasets/master/earthquakes-23k.csv'
-)
-fig = px.density_mapbox(
-df,
-lat='Latitude',
-lon='Longitude',
-z='Magnitude',
-radius=10,
-center=dict(lat=0, lon=180),
-zoom=0,
-mapbox_style="stamen-terrain",
-)
-fig.show()
-fig.write_html('assets/plotly/demo.html')
-{% endhighlight %}
+Στην διαφάνεια #3 (Ελλάδα και Νοτιοανατολική Μεσόγειος) χρησιμοποιούμε δεδομένα ERA5 και υπολογίζουμε αποκλίσεις από την κλιματολογία του αντίστοιχου μήνα για τα έτη 1991-2020. Η κατάταξη του κάθε πλεγματικού σημείου σε ακραίο μέγιστο (π.χ. 1ος ή 2ος και 3ος) ή αντίστοιχα ακραίου ελάχιστου σημειώνεται με ανοικτό και κλειστό λευκό κύκλο.
 
----
+Στην διαφάνεια #4 (Εκτίμηση επόμενου τριμήνου) χρησιμοποιούμε δεδομένα από εποχικές εκτιμήσεις από το μοντέλο του ECMWF SEAS5.1. Η αποκλίσεις είναι η ενδιάμεση τιμή.
 
-## Details boxes
+Όλα τα γραφήματα παράχθηκαν με κώδικα python.
 
-Details boxes are collapsible boxes which hide additional information from the user. They can be added with the `details` liquid tag:
 
-{% details Click here to know more %}
-Additional details, where math $$ 2x - 1 $$ and `code` is rendered correctly.
-{% enddetails %}
 
----
-
-## Layouts
-
-The main text column is referred to as the body.
-It is the assumed layout of any direct descendants of the `d-article` element.
-
-<div class="fake-img l-body">
-  <p>.l-body</p>
-</div>
-
-For images you want to display a little larger, try `.l-page`:
-
-<div class="fake-img l-page">
-  <p>.l-page</p>
-</div>
-
-All of these have an outset variant if you want to poke out from the body text a little bit.
-For instance:
-
-<div class="fake-img l-body-outset">
-  <p>.l-body-outset</p>
-</div>
-
-<div class="fake-img l-page-outset">
-  <p>.l-page-outset</p>
-</div>
-
-Occasionally you’ll want to use the full browser width.
-For this, use `.l-screen`.
-You can also inset the element a little from the edge of the browser by using the inset variant.
-
-<div class="fake-img l-screen">
-  <p>.l-screen</p>
-</div>
-<div class="fake-img l-screen-inset">
-  <p>.l-screen-inset</p>
-</div>
-
-The final layout is for marginalia, asides, and footnotes.
-It does not interrupt the normal flow of `.l-body` sized text except on mobile screen sizes.
-
-<div class="fake-img l-gutter">
-  <p>.l-gutter</p>
-</div>
-
----
-
-## Other Typography?
-
-Emphasis, aka italics, with _asterisks_ (`*asterisks*`) or _underscores_ (`_underscores_`).
-
-Strong emphasis, aka bold, with **asterisks** or **underscores**.
-
-Combined emphasis with **asterisks and _underscores_**.
-
-Strikethrough uses two tildes. ~~Scratch this.~~
-
-1. First ordered list item
-2. Another item
-   ⋅⋅\* Unordered sub-list.
-3. Actual numbers don't matter, just that it's a number
-   ⋅⋅1. Ordered sub-list
-4. And another item.
-
-⋅⋅⋅You can have properly indented paragraphs within list items. Notice the blank line above, and the leading spaces (at least one, but we'll use three here to also align the raw Markdown).
-
-⋅⋅⋅To have a line break without a paragraph, you will need to use two trailing spaces.⋅⋅
-⋅⋅⋅Note that this line is separate, but within the same paragraph.⋅⋅
-⋅⋅⋅(This is contrary to the typical GFM line break behaviour, where trailing spaces are not required.)
-
-- Unordered list can use asterisks
-
-* Or minuses
-
-- Or pluses
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-[I'm a reference-style link][Arbitrary case-insensitive reference text]
-
-[You can use numbers for reference-style link definitions][1]
-
-Or leave it empty and use the [link text itself].
-
-URLs and URLs in angle brackets will automatically get turned into links.
-http://www.example.com or <http://www.example.com> and sometimes
-example.com (but not on Github, for example).
-
-Some text to show that the reference links can follow later.
-
-[arbitrary case-insensitive reference text]: https://www.mozilla.org
-[1]: http://slashdot.org
-[link text itself]: http://www.reddit.com
-
-Here's our logo (hover to see the title text):
-
-Inline-style:
-![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
-
-Reference-style:
-![alt text][logo]
-
-[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
-
-Inline `code` has `back-ticks around` it.
-
-```javascript
-var s = "JavaScript syntax highlighting";
-alert(s);
-```
-
-```python
-s = "Python syntax highlighting"
-print s
-```
-
-```
-No language indicated, so no syntax highlighting.
-But let's throw in a <b>tag</b>.
-```
-
-Colons can be used to align columns.
-
-| Tables        |      Are      |  Cool |
-| ------------- | :-----------: | ----: |
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      |   centered    |   $12 |
-| zebra stripes |   are neat    |    $1 |
-
-There must be at least 3 dashes separating each header cell.
-The outer pipes (|) are optional, and you don't need to make the
-raw Markdown line up prettily. You can also use inline Markdown.
-
-| Markdown | Less      | Pretty     |
-| -------- | --------- | ---------- |
-| _Still_  | `renders` | **nicely** |
-| 1        | 2         | 3          |
-
-> Blockquotes are very handy in email to emulate reply text.
-> This line is part of the same quote.
-
-Quote break.
-
-> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can _put_ **Markdown** into a blockquote.
-
-Here's a line for us to start with.
-
-This line is separated from the one above by two newlines, so it will be a _separate paragraph_.
-
-This line is also a separate paragraph, but...
-This line is only separated by a single newline, so it's a separate line in the _same paragraph_.
